--- a/libgfortran/configure.ac
+++ b/libgfortran/configure.ac
@@ -273,6 +273,7 @@ if test "x${with_newlib}" = "xyes"; then
    AC_DEFINE(HAVE_LOCALTIME_R, 1, [Define if you have localtime_r.])
    AC_DEFINE(HAVE_GMTIME_R, 1, [Define if you have gmtime_r.])
    AC_DEFINE(HAVE_STRTOK_R, 1, [Define if you have strtok_r.])
+   AC_DEFINE(HAVE_SLEEP, 1, [Define if you have sleep.])
 
    # At some point, we should differentiate between architectures
    # like x86, which have long double versions, and alpha/powerpc/etc.,
