--- a/configure.ac
+++ b/configure.ac
@@ -825,6 +825,15 @@ case "${target}" in
   cris-*-* | crisv32-*-*)
     libgloss_dir=cris
     ;;
+  kvx-*-elf)
+    libgloss_dir=kvx-elf
+    ;;
+  kvx-*-mbr)
+    libgloss_dir=kvx-mbr
+    ;;
+  kvx-*-cos)
+    libgloss_dir=kvx-cos
+    ;;
   hppa*-*-*)
     libgloss_dir=pa
     ;;
@@ -1103,9 +1112,6 @@ case "${target}" in
     ;;
   i[[3456789]]86-*-rdos*)
     noconfigdirs="$noconfigdirs gdb"
-    ;;
-  kvx)
-    noconfigdirs="$noconfigdirs gas"
     ;;
   mmix-*-*)
     noconfigdirs="$noconfigdirs gdb"
