--- a/sim/Makefile.in
+++ b/sim/Makefile.in
@@ -784,6 +784,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+runstatedir = @runstatedir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sim_bitsize = @sim_bitsize@
